--- a/full-baseline.ipynb
+++ b/full-baseline.ipynb
@@ -6,27 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "from processing import load_dataset, unique_item_name"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 13.1 s, sys: 4.69 s, total: 17.8 s\n",
-      "Wall time: 16.4 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
-    "train = pd.read_parquet('data/data_fusion_train.parquet')"
+    "train_data_name = 'data/data_fusion_train.parquet'"
    ]
   },
   {
@@ -38,46 +27,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.09 s, sys: 1.36 s, total: 3.45 s\n",
-      "Wall time: 2.94 s\n"
+      "CPU times: user 34.3 s, sys: 24.6 s, total: 59 s\n",
+      "Wall time: 54.5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "train = train[train.category_id != -1]\n",
-    "train['weight'] = 1\n",
-    "train_unique = train.groupby('item_name').agg({'category_id': 'first', 'weight': 'sum'}).reset_index()"
+    "train = load_dataset(train_data_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 3.21 s, sys: 5.46 s, total: 8.66 s\n",
-      "Wall time: 893 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "tfidf = TfidfVectorizer(max_features=10000)\n",
-    "X_train = tfidf.fit_transform(train_unique.item_name)\n",
-    "y_train = train_unique['category_id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,121 +64,238 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>weight</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th>receipt_id</th>\n",
+       "      <th>receipt_dayofweek</th>\n",
+       "      <th>receipt_time</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>item_quantity</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>item_nds_rate</th>\n",
        "      <th>category_id</th>\n",
-       "      <th></th>\n",
+       "      <th>brands</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>receipt_item_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>0.205393</td>\n",
+       "      <th>12154128</th>\n",
+       "      <td>6614924</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22:53</td>\n",
+       "      <td>Хачапури ТЦ по-аджарски 180г</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>84</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>0.138665</td>\n",
+       "      <th>19802417</th>\n",
+       "      <td>5898392</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11:23</td>\n",
+       "      <td>Муфта ПП d20 шт</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>105</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>0.102909</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>0.077039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>0.065114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>0.000048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.000035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>0.000028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>0.000017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>0.000010</td>\n",
+       "      <th>6535863</th>\n",
+       "      <td>5065280</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16:15</td>\n",
+       "      <td>Пакет</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>203</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>96 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               weight\n",
-       "category_id          \n",
-       "203          0.205393\n",
-       "84           0.138665\n",
-       "80           0.102909\n",
-       "78           0.077039\n",
-       "71           0.065114\n",
-       "...               ...\n",
-       "100          0.000048\n",
-       "1            0.000035\n",
-       "106          0.000028\n",
-       "97           0.000017\n",
-       "46           0.000010\n",
+       "          receipt_id  receipt_dayofweek receipt_time  \\\n",
+       "12154128     6614924                  2        22:53   \n",
+       "19802417     5898392                  1        11:23   \n",
+       "6535863      5065280                  0        16:15   \n",
        "\n",
-       "[96 rows x 1 columns]"
+       "                             item_name  item_quantity  item_price  \\\n",
+       "12154128  Хачапури ТЦ по-аджарски 180г            1.0           9   \n",
+       "19802417               Муфта ПП d20 шт            4.0           2   \n",
+       "6535863                          Пакет            1.0           3   \n",
+       "\n",
+       "          item_nds_rate  category_id brands  weight  receipt_item_count  \n",
+       "12154128             -1           84   None       1                   1  \n",
+       "19802417              6          105   None       1                  12  \n",
+       "6535863               1          203   None       1                  11  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class_weights = train_unique.groupby('category_id').agg({'weight': 'sum'})\n",
-    "class_weights /= class_weights.sum()\n",
+    "train.sample(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.16 s, sys: 214 ms, total: 1.37 s\n",
+      "Wall time: 1.37 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "\n",
-    "class_weights = class_weights.sort_values('weight', ascending=False)\n",
-    "class_weights"
+    "train_unique = unique_item_name(train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>receipt_dayofweek</th>\n",
+       "      <th>item_nds_rate</th>\n",
+       "      <th>receipt_item_count</th>\n",
+       "      <th>item_quantity</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>receipt_id</th>\n",
+       "      <th>category_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10671</th>\n",
+       "      <td>Бокс универсальный С-56 В, 460</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6715883</td>\n",
+       "      <td>139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24519</th>\n",
+       "      <td>Мин.вода ОВК ЕССЕНТУКИ №17 пэт 1.5л</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1951447</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32816</th>\n",
+       "      <td>Рассольник Петербургский с мясом (говядина)250...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1627525</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               item_name  receipt_dayofweek  \\\n",
+       "10671                     Бокс универсальный С-56 В, 460                  4   \n",
+       "24519                Мин.вода ОВК ЕССЕНТУКИ №17 пэт 1.5л                  0   \n",
+       "32816  Рассольник Петербургский с мясом (говядина)250...                  1   \n",
+       "\n",
+       "       item_nds_rate  receipt_item_count  item_quantity  item_price  \\\n",
+       "10671              1                   2            2.0          14   \n",
+       "24519              1                  17            1.0           7   \n",
+       "32816              1                   6            1.0           7   \n",
+       "\n",
+       "       receipt_id  category_id  \n",
+       "10671     6715883          139  \n",
+       "24519     1951447           83  \n",
+       "32816     1627525           71  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class_weights = class_weights.to_dict()['weight']"
+    "train_unique.sample(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.47 s, sys: 5.62 s, total: 12.1 s\n",
+      "Wall time: 4.42 s\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.metrics import f1_score, make_scorer\n",
-    "import numpy as np\n",
+    "%%time\n",
     "\n",
-    "def f1_weighted(y, p):\n",
-    "    resulted_f1 = []\n",
-    "    for c in y.unique():\n",
-    "        f1 = f1_score(y == c, p == c)\n",
-    "        resulted_f1.append(f1 * class_weights[c])\n",
-    "        \n",
-    "    return np.sum(resulted_f1) \n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "f1_weighted_sc = make_scorer(f1_weighted)"
+    "tfidf = TfidfVectorizer(\n",
+    "    max_features=300000, \n",
+    "    ngram_range=(3, 5), \n",
+    "    analyzer=\"char_wb\", \n",
+    ")\n",
+    "X_train = tfidf.fit_transform(train_unique.item_name)\n",
+    "y_train = train_unique['category_id']"
    ]
   },
   {
@@ -227,8 +307,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 116 ms, sys: 403 ms, total: 518 ms\n",
-      "Wall time: 5.13 s\n"
+      "CPU times: user 111 ms, sys: 539 ms, total: 650 ms\n",
+      "Wall time: 30.8 s\n"
      ]
     }
    ],
@@ -236,12 +316,13 @@
     "%%time\n",
     "\n",
     "from sklearn.svm import LinearSVC\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_predict, KFold\n",
     "\n",
-    "clf = LinearSVC()\n",
+    "clf = LinearSVC(C=1)\n",
     "\n",
     "N_JOBS=8\n",
-    "scores = cross_val_score(clf, X_train, y_train, cv=N_JOBS, scoring=f1_weighted_sc, n_jobs=N_JOBS)"
+    "folds = KFold(N_JOBS, shuffle=True, random_state=0)\n",
+    "predicts = cross_val_predict(clf, X_train, y_train, cv=folds, n_jobs=N_JOBS, method='predict')"
    ]
   },
   {
@@ -252,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.7216731030879311, 0.06171714476070219)"
+       "'0.840'"
       ]
      },
      "execution_count": 9,
@@ -261,7 +342,10 @@
     }
    ],
    "source": [
-    "np.mean(scores), np.std(scores)"
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "score = f1_score(y_train, predicts, average='weighted')\n",
+    "f'{score:.3f}'"
    ]
   },
   {
@@ -273,8 +357,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.1 s, sys: 27.1 ms, total: 3.13 s\n",
-      "Wall time: 3.13 s\n"
+      "CPU times: user 23.5 s, sys: 1.54 s, total: 25 s\n",
+      "Wall time: 25 s\n"
      ]
     }
    ],
@@ -300,23 +384,16 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "итого 12M\r\n",
-      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov  312 янв 30 21:37 answers.csv\r\n",
-      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov 7,4M янв 30 21:38 clf_task1\r\n",
-      "drwxr-xr-x 2 dmitry.dremov dmitry.dremov 4,0K янв 30 18:06 data\r\n",
-      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov  352 янв 30 18:11 script.py\r\n",
-      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov 2,9M янв 30 21:38 submission.zip\r\n",
-      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov 1,3M янв 30 21:38 tfidf\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!ls -lh t1_sub"
+    "!cp processing.py t1_sub/\n",
+    "\n",
+    "files_list = [\n",
+    "    'tfidf',\n",
+    "    'clf_task1',\n",
+    "    'script.py',\n",
+    "    'processing.py',\n",
+    "]"
    ]
   },
   {
@@ -328,8 +405,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['clf_task1', 'tfidf', 'script.py']\n",
-      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov 2,9M янв 30 21:38 t1_sub/submission.zip\r\n"
+      "['tfidf', 'clf_task1', 'script.py', 'processing.py']\n",
+      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov 44M мар 15 13:22 t1_sub/submission.zip\r\n"
      ]
     }
    ],
@@ -339,11 +416,7 @@
     "\n",
     "submission_name = 't1_sub/submission.zip'\n",
     "with zipfile.ZipFile(submission_name, 'w') as zipObj:\n",
-    "    for filename in [\n",
-    "        'clf_task1',\n",
-    "        'tfidf',\n",
-    "        'script.py',\n",
-    "    ]:\n",
+    "    for filename in files_list:\n",
     "        zipObj.write(\n",
     "            f't1_sub/{filename}', \n",
     "            arcname=filename, \n",
@@ -365,9 +438,22 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "итого 240M\r\n",
+      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov 220M мар 15 13:21 clf_task1\r\n",
+      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov  21M мар 15 13:21 tfidf\r\n",
+      "drwxr-xr-x 2 dmitry.dremov dmitry.dremov 4,0K мар 15 13:22 data\r\n",
+      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov  875 мар 15 13:21 processing.py\r\n",
+      "-rw-r--r-- 1 dmitry.dremov dmitry.dremov  558 мар 15 13:14 script.py\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!cd t1_sub; python3 script.py"
+    "!rm -r test; mkdir test; cp -r t1_sub/data test/data; cd test; unzip -q ../t1_sub/submission.zip; ls -lhS"
    ]
   },
   {
@@ -376,76 +462,24 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>pred</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  pred\n",
-       "0   0    80\n",
-       "1   1   204\n",
-       "2   2   204\n",
-       "3   3    71\n",
-       "4   4    79"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id,pred\r\n",
+      "0,77\r\n",
+      "1,76\r\n",
+      "2,80\r\n",
+      "3,82\r\n",
+      "4,78\r\n",
+      "5,38\r\n",
+      "6,71\r\n",
+      "7,84\r\n",
+      "8,139\r\n"
+     ]
     }
    ],
    "source": [
-    "pd.read_csv('t1_sub/answers.csv').head(5)"
+    "!cd test && python3 script.py && head answers.csv"
    ]
   },
   {
